--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^1.9.1",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.5.0",
+    "ngx-cookie-service": "^10.0.1",
     "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
@@ -39,9 +40,9 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
