--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,10 +40,10 @@ jobs:
             #     name: Linting
             #     command: npm run lint
 
-            # Test the source code
-            - run:
-                name: Testing
-                command: npm run test
+            # # Test the source code
+            # - run:
+            #     name: Testing
+            #     command: npm run test
 
             # End to End test
             - run:
