--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,7 @@ jobs:
                 command: tar -cvzf myartifact.tar /tmp/artifactfile
 
             - store_artifacts:
-                path: myartifact.tar
-                destination: artifact-file
+                path: ~/project/tmp/artifacts
 
             - persist_to_workspace:
                 root: .
