--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
                 command: tar -cvzf myartifact.tar /tmp/artifactfile
 
             - store_artifacts:
-                path: ~/project/tmp/artifacts
+                path: myartifact.tar
 
             - persist_to_workspace:
                 root: .
