--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,9 @@ jobs:
                 name: Compress Artifacts
                 command: tar -cvzf myartifact.tar /tmp/artifactfile
 
-            - store_artifacts:
+            - store_artifacts: 
                 path: myartifact.tar
+                destination: artifact_name
 
             - persist_to_workspace:
                 root: .
