--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
         docker:
             - image: circleci/node:15.6.0-browsers
 
+        working_directory: /tmp
         steps:
 
             # Checkout the code from the branch into the working_directory
@@ -42,10 +43,14 @@ jobs:
                     if [ "${CIRCLE_BRANCH}" == "staging" ]; then
                         npm run build-qa
                     elif [ "${CIRCLE_BRANCH}" == "master" ]; then
-                        npm run build > artifactfile
+                        echo "npm run build" > /tmp/artifact-1;
                     else
                         npm run build-dev
                     fi
+
+            - store_artifacts:
+                path: /tmp/artifact-1
+                destination: artifact-file
 
             - run:
                 name: Compress Artifacts
