--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
                     if [ "${CIRCLE_BRANCH}" == "staging" ]; then
                         npm run build-qa
                     elif [ "${CIRCLE_BRANCH}" == "master" ]; then
-                        echo "npm run build" > ~/project/artifact-1;
+                        npm run build > ~/project/artifact-1
                     else
                         npm run build-dev
                     fi
