--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,10 @@ jobs:
                         npm run build-dev
                     fi
 
-            name: Compress Artifacts
-            command: |
-                tar -cvzf myartifact.tar ~/project/artifact-1
+            - run:
+                name: Compress Artifacts
+                command: |
+                    tar -cvzf myartifact.tar ~/project/artifact-1
 
             - store_artifacts:
                 path: ~/project/artifact-1
