--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             # Install project dependencies
             - run:
                 name: Install local dependencies
-                command: npm install
+                command: npm install && RUN npm install --only=dev
 
             # Cache local dependencies if they don't exist
             - save_cache:
