--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,19 +42,17 @@ jobs:
                     if [ "${CIRCLE_BRANCH}" == "staging" ]; then
                         npm run build-qa
                     elif [ "${CIRCLE_BRANCH}" == "master" ]; then
-                        sudo npm install -g @angular/cli && ng build --prod > ~/project/artifact
+                        sudo npm install -g @angular/cli && ng build --prod
+                        ls dist
                     else
                         npm run build-dev
                     fi
+            # "ng build --prod; zip -r dist/council-search-app.zip dist/council-search-app;",
 
             # - run:
             #     name: Compress Artifacts
             #     command: |
             #         tar -cvzf myartifact.tar -P ~/project/artifact-1
-
-            - store_artifacts:
-                path: ~/project/artifact
-                destination: council-search-app
 
             - persist_to_workspace:
                 root: .
@@ -66,6 +64,10 @@ jobs:
                 key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
                 paths:
                     - dist
+
+            - store_artifacts:
+                path: dist
+                destination: dist
 
 workflows:
     version: 2
