--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
 
             - store_artifacts:
                 path: /home/circleci/project/dist/council-search-app
-                destination: /home/circleci/project/dist/council-search-app
+                destination: council-search-app
 
 workflows:
     version: 2
