--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
 
             - store_artifacts:
                 path: dist
-                destination: council-search-app.zip
+                destination: ~/project/council-search-app.zip
 
 workflows:
     version: 2
