--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
 
 
             - store_artifacts:
-                path: council-search-app.zip
+                path: ~/project/council-search-app.zip
                 destination: council-search-app.zip
 
             - persist_to_workspace:
