--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
 
             - store_artifacts:
                 path: ~/project/council-search-app.zip
-                destination: council-search-app.zip
+                destination: ~/project/council-search-app.zip
 
             - persist_to_workspace:
                 root: .
